[gd_scene load_steps=12 format=2]

[ext_resource path="res://Font/fuente_menu.tres" type="DynamicFont" id=1]
[ext_resource path="res://escenas/Fondo_movimiento.tscn" type="PackedScene" id=2]
[ext_resource path="res://Estilos/BotonHoverEstilo.tres" type="StyleBox" id=3]
[ext_resource path="res://Estilos/BotonNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://Estilos/BotonPressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Font/Kenney Pixel.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/Niveles.gd" type="Script" id=7]
[ext_resource path="res://escenas/MenuPausa.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=4]
size = 130
outline_size = 4
outline_color = Color( 0.34902, 0.623529, 0.290196, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.905882, 0.764706, 0.690196, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.905882, 0.764706, 0.690196, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.730957, 0.58705, 0.511099, 1 )
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.694118, 0.694118, 0.564706, 1 )

[node name="Niveles" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 110.0
margin_top = -248.0
margin_right = 654.0
margin_bottom = -143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VOLVER" type="Button" parent="HBoxContainer"]
margin_right = 291.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "VOLVER"

[node name="VBoxMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -285.0
margin_right = 272.0
margin_bottom = 285.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxBotones" type="VBoxContainer" parent="VBoxMenu"]
margin_right = 544.0
margin_bottom = 570.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nivel1" type="Button" parent="VBoxMenu/VBoxBotones"]
margin_right = 544.0
margin_bottom = 105.0
custom_colors/font_color_hover = Color( 0.184314, 0.407843, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.196078, 0.12549, 0.12549, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Nivel 1"

[node name="Nivel2" type="Button" parent="VBoxMenu/VBoxBotones"]
margin_top = 155.0
margin_right = 544.0
margin_bottom = 260.0
custom_colors/font_color_hover = Color( 0.184314, 0.407843, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.196078, 0.12549, 0.12549, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Nivel 2"

[node name="Nivel3" type="Button" parent="VBoxMenu/VBoxBotones"]
margin_top = 310.0
margin_right = 544.0
margin_bottom = 415.0
custom_colors/font_color_hover = Color( 0.184314, 0.407843, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.196078, 0.12549, 0.12549, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Nivel 3"

[node name="Nivel4" type="Button" parent="VBoxMenu/VBoxBotones"]
margin_top = 465.0
margin_right = 544.0
margin_bottom = 570.0
custom_colors/font_color_hover = Color( 0.184314, 0.407843, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.196078, 0.12549, 0.12549, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Nivel 4"

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="MenuPausa" parent="." instance=ExtResource( 11 )]
visible = false

[connection signal="pressed" from="HBoxContainer/VOLVER" to="." method="_on_VOLVER_pressed"]
[connection signal="pressed" from="VBoxMenu/VBoxBotones/Nivel1" to="." method="_on_Nivel1_pressed"]
[connection signal="pressed" from="VBoxMenu/VBoxBotones/Nivel2" to="." method="_on_Nivel2_pressed"]
